--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -3,6 +3,7 @@
 # https://jpanther.github.io/congo/docs/getting-started/
 
 # baseURL = "https://miguel1man.github.io/congo/"
+theme = "fire"
 defaultContentLanguage = "en"
 
 enableRobotsTXT = true
