--- a/MH/config/_default/params.toml
+++ b/MH/config/_default/params.toml
@@ -12,7 +12,7 @@ autoSwitchAppearance = true
 enableSearch = true
 enableCodeCopy = true
 
-mainSections = ["proyectos"]
+mainSections = ["projects"]
 # robots = ""
 
 [header]
