add multi language support

--- a/MH/config/_default/config.toml
+++ b/MH/config/_default/config.toml
@@ -3,7 +3,7 @@
 # https://jpanther.github.io/congo/docs/getting-started/
 
 theme = "fire"
-defaultContentLanguage = "es"
+defaultContentLanguage = "en"
 
 enableRobotsTXT = true
 paginate = 15
