add homepage in spanish language

--- a/MH/config/_default/languages.en.toml
+++ b/MH/config/_default/languages.en.toml
@@ -1,6 +1,6 @@
 languageCode = "en"
 languageName = "English"
-displayName = ":flag-uk:"
+displayName = ":flag-en:"
 isoCode = "en"
 weight = 1
 rtl = false
