--- a/MH/config/_default/languages.es.toml
+++ b/MH/config/_default/languages.es.toml
@@ -1,6 +1,6 @@
 languageCode = "es"
 languageName = "Spanish"
-displayName = ":flag-pe:"
+displayName = ":flag-es:"
 isoCode = "es"
 weight = 2
 rtl = false
