--- a/MH/config/_default/menus.en.toml
+++ b/MH/config/_default/menus.en.toml
@@ -11,7 +11,7 @@
 # ordered by weight from lowest to highest.
 
 [[main]]
-  name = "Proyectos"
+  name = "Projects"
   pageRef = "projects"
   weight = 10
 
