update icons for languages

--- a/MH/config/_default/languages.en.toml
+++ b/MH/config/_default/languages.en.toml
@@ -1,6 +1,6 @@
 languageCode = "en"
 languageName = "English"
-displayName = ":flag-en:"
+displayName = ":en:"
 isoCode = "en"
 weight = 1
 rtl = false
