update bio and add links to blog

--- a/MH/config/_default/languages.en.toml
+++ b/MH/config/_default/languages.en.toml
@@ -7,7 +7,7 @@ rtl = false
 
 title = "MH"
 # logo = "img/logo.jpg"
-description = "Portfolio Miguel Angel Huamán."
+description = "Miguel Angel Huamán Portfolio."
 copyright = "&copy; 2023"
 
 dateFormat = "2 January 2006"
